Fix alignment

--- a/src/_includes/sass/partials/_contact.scss
+++ b/src/_includes/sass/partials/_contact.scss
@@ -1,5 +1,5 @@
 #main-contact {
-    max-width: 1225px;
+    max-width: 1200px;
     padding: 0 1.5rem;
     margin: 2.75rem auto 2rem auto;
     padding-bottom: 1.5rem;
@@ -116,7 +116,7 @@
     padding: 1rem 1.25rem;
     background: inherit;
     margin: 2rem auto;
-    max-width: 1225px;
+    max-width: 1200px;
 }
 
 .contact-wrapper {
