--- a/src/_includes/sass/partials/_featured-art.scss
+++ b/src/_includes/sass/partials/_featured-art.scss
@@ -39,7 +39,7 @@ main {
         padding: .5rem 0;
         margin: 0 auto;
         padding: 1rem 1.5rem;
-        max-width: 1225px;
+        max-width: 1200px;
     }
     .feat-art-list {
         display: grid;
