--- a/src/_includes/sass/partials/_footer.scss
+++ b/src/_includes/sass/partials/_footer.scss
@@ -7,7 +7,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     padding: 1rem 1.5rem;
-    max-width: 1225px;
+    max-width: 1200px;
     margin: .75em auto 1.75rem auto;
     width: 100%;
     
@@ -64,7 +64,7 @@
     margin-top: .5rem;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1225px;
+    max-width: 1200px;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
     .footer-flex {
