--- a/src/_includes/sass/partials/_main.scss
+++ b/src/_includes/sass/partials/_main.scss
@@ -54,7 +54,7 @@ main {
     }
     .projects {
         .projects-wrapper {
-            max-width: 1225px;
+            max-width: 1200px;
             display: flex;
             flex-direction: column;
             margin: 1rem auto;
@@ -160,7 +160,7 @@ main {
     }
 
     .main-content {
-        max-width: 1225px;
+        max-width: 1200px;
 
         table {
             th {
@@ -236,7 +236,7 @@ main {
     .home-banner {
         margin-left: auto;
         margin-right: auto;
-        max-width: 1225px;
+        max-width: 1200px;
         margin-right: 1rem;
 
         p {
@@ -296,7 +296,7 @@ main {
     }
 
     .banner-container {
-        max-width: 1225px;
+        max-width: 1200px;
         padding-left: 0;
         padding-right: 0;
         margin: 2.75rem auto 0 auto;
