--- a/src/_includes/sass/partials/_nav.scss
+++ b/src/_includes/sass/partials/_nav.scss
@@ -12,10 +12,10 @@
         justify-content: space-between;
         align-items: center;
         list-style: none;
-        padding: 0 1rem;
+        padding: 0 1.5rem;
         margin: 1rem auto 1.5rem auto;
         width: 100%;
-        max-width: 1225px;
+        max-width: 1200px;
 
         .reach-out {
             background: #212121;
@@ -55,11 +55,11 @@
         align-items: center;
         justify-content: flex-start;
         margin: .8rem auto 0 auto;
-        padding: 15px 1rem;
+        padding: 15px 1.5rem;
         width: 100%;
-        max-width: 1225px;
         position: relative;
         overflow: hidden;
+        max-width: 1200px;
 
         li {
             &.stl {
