--- a/src/_includes/sass/partials/_posts.scss
+++ b/src/_includes/sass/partials/_posts.scss
@@ -142,7 +142,7 @@ main {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(5rem, 1fr);
     gap: .75rem;
-    max-width: 1225px;
+    max-width: 1200px;
     margin: 0 auto;
 
     .read-more {
